added jobs page, navbar

--- a/views/jobs.html
+++ b/views/jobs.html
@@ -20,5 +20,5 @@
     </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-<h1>SuperHeroes</h1>
-<script src="superheroes.js"></script>
+<h1>Jobs</h1>
+<script src="jobs.js"></script>
