--- a/views/superheroes.html
+++ b/views/superheroes.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -8,13 +9,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">SuperSkilz</a>
+        <a class="navbar-brand" href="index.html">SuperSkilz</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-        <li><a href="views/superheroes.html">Heroes</a></li>
+        <li><a href="./superheroes.html">Heroes</a></li>
         <li><a href="#">Jobs</a></li>
         </ul>
     </div><!-- /.navbar-collapse -->
