--- a/views/superheroes.html
+++ b/views/superheroes.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" href="/main.css">
     </head>
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -25,6 +26,10 @@
         </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-    <h1>SuperHeroes</h1>
-    <script src="superheroes.js"></script>
+    <body class="text-center">
+        <h1>SuperHeroes: </h1>
+        <br>
+        <div id="card-holder"></div>
+        <script src="/javascripts/superheroes.js"></script>
+    </body>
 </html>
