match Zoe's project

--- a/main.css
+++ b/main.css
@@ -2,6 +2,25 @@ body {
     background-color: #504A4A
 }
 
-h1, h2 {
+h2 {
     color: white;
+}
+
+.panel > .panel-heading {
+    background-color: #F78F3F
+}
+
+.panel {
+    background-color: #504A4A;
+    border: solid 1px white;
+    text-align: center;
+    height: 450px;
+}
+
+.charDescription {
+    color: #E23636;
+}
+
+.charImage {
+    border-radius: 100%;
 }
