--- a/views/jobs.html
+++ b/views/jobs.html
@@ -28,6 +28,17 @@
     </nav>
     <body class="text-center">
         <h1>Jobs</h1>
-        <script src="jobs.js"></script>
+        <!-- Single button -->
+        <div class="btn-group">
+            <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Select a Superhero: <span class="caret"></span>
+            </button>
+            <ul id="awesome-dropdown" class="dropdown-menu">
+            </ul>
+        </div>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="/javascripts/jobs.js"></script>
     </body>
 </html>
